@@ -755,7 +755,7 @@ eet_delete(Eet_File *ef,
 
 /**
  * Alias a specific section to another one. Destination may exist or not,
- * no check are done.
+ * no checks are done.
  * @param ef A valid eet file handle opened for writing.
  * @param name Name of the new entry. eg: "/base/file_i_want".
  * @param destination Actual source of the aliased entry eg: "/base/the_real_stuff_i_want".
@@ -777,7 +777,7 @@ eet_alias(Eet_File *ef,
 /**
  * Retrieve the filename of an Eet_File
  * @param ef A valid eet file handle opened for writing.
- * @return The file opened with eet_open(), or NULL on error
+ * @return The stringshared file string opened with eet_open(), or NULL on error
  *
  * @note This function will return NULL for files opened with eet_memopen_read()
  *
